docker/podspecs/web-controller.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: quay.io/aknuds1/muzhack
        # Always pull latest version of image
        imagePullPolicy: Always
        ports:
        - name: http-server
          containerPort: 80
      imagePullSecrets:
      - name: quay.io
