docker/podspecs/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
  selector:
    app: web
  type: NodePort
